add cancel api
